Changing include path of implementation include files, add some tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,11 @@ cmake_minimum_required(VERSION 3.15.0)
 include(cmake/StandardSettings.cmake)
 project(json_parser VERSION 0.1.0)
 
+set(PJ_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
 
 # this library is for reusing compiler options
 add_library(project_options INTERFACE)
-target_include_directories(project_options INTERFACE ${PROJECT_SOURCE_DIR}/include)
+target_include_directories(project_options INTERFACE ${PJ_INCLUDE_DIR})
 
 # this library is for reusing warnings
 add_library(project_warnings INTERFACE)
