--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,12 +8,12 @@ set(SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/Token.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Scanner.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Parser.cpp
-    ${PROJECT_SOURCE_DIR}/include/json_parser/core.h
-    ${PROJECT_SOURCE_DIR}/include/json_parser/JsonException.h
-    ${PROJECT_SOURCE_DIR}/include/json_parser/JsonValue.h
-    ${PROJECT_SOURCE_DIR}/include/detail/Token.h
-    ${PROJECT_SOURCE_DIR}/include/detail/Scanner.h
-    ${PROJECT_SOURCE_DIR}/include/detail/Parser.h
+    ${PJ_INCLUDE_DIR}/json_parser/core.h
+    ${PJ_INCLUDE_DIR}/json_parser/JsonException.h
+    ${PJ_INCLUDE_DIR}/json_parser/JsonValue.h
+    ${PJ_INCLUDE_DIR}/json_parser/detail/Token.h
+    ${PJ_INCLUDE_DIR}/json_parser/detail/Scanner.h
+    ${PJ_INCLUDE_DIR}/json_parser/detail/Parser.h
 )
 target_sources(${PROJECT_NAME} PUBLIC ${SOURCES})
 target_link_libraries(${PROJECT_NAME} PRIVATE project_warnings)
